// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skip links should render custom links 1`] = `
<SkipLinks
  mainId="#my-custom-main-id"
  navigationId="#my-custom-nav-id"
  t={[Function]}
>
  <nav
    aria-label="Skip links"
    className="theme-tc-skip-links"
  >
    <ul>
      <li
        key="navigation"
      >
        <SkipTo
          href="#my-custom-nav-id"
          label="Skip header to navigation"
        >
          <a
            href="#my-custom-nav-id"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <svg
                  aria-hidden="true"
                  className="theme-tc-svg-icon tc-svg-icon theme-rotate-270"
                  focusable="false"
                  name="talend-arrow-left"
                  title={null}
                >
                  <use
                    xlinkHref="#talend-arrow-left"
                  />
                </svg>
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip header to navigation
            </span>
          </a>
        </SkipTo>
      </li>
      <li
        key="main"
      >
        <SkipTo
          href="#my-custom-main-id"
          label="Skip navigation to main content"
        >
          <a
            href="#my-custom-main-id"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <svg
                  aria-hidden="true"
                  className="theme-tc-svg-icon tc-svg-icon theme-rotate-270"
                  focusable="false"
                  name="talend-arrow-left"
                  title={null}
                >
                  <use
                    xlinkHref="#talend-arrow-left"
                  />
                </svg>
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip navigation to main content
            </span>
          </a>
        </SkipTo>
      </li>
    </ul>
  </nav>
</SkipLinks>
`;

exports[`Skip links should render default layout links 1`] = `
<SkipLinks
  mainId="#tc-layout-main"
  navigationId="#tc-layout-side-menu"
  t={[Function]}
>
  <nav
    aria-label="Skip links"
    className="theme-tc-skip-links"
  >
    <ul>
      <li
        key="navigation"
      >
        <SkipTo
          href="#tc-layout-side-menu"
          label="Skip header to navigation"
        >
          <a
            href="#tc-layout-side-menu"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <svg
                  aria-hidden="true"
                  className="theme-tc-svg-icon tc-svg-icon theme-rotate-270"
                  focusable="false"
                  name="talend-arrow-left"
                  title={null}
                >
                  <use
                    xlinkHref="#talend-arrow-left"
                  />
                </svg>
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip header to navigation
            </span>
          </a>
        </SkipTo>
      </li>
      <li
        key="main"
      >
        <SkipTo
          href="#tc-layout-main"
          label="Skip navigation to main content"
        >
          <a
            href="#tc-layout-main"
          >
            <span
              className="theme-icon"
            >
              <Icon
                name="talend-arrow-left"
                transform="rotate-270"
              >
                <svg
                  aria-hidden="true"
                  className="theme-tc-svg-icon tc-svg-icon theme-rotate-270"
                  focusable="false"
                  name="talend-arrow-left"
                  title={null}
                >
                  <use
                    xlinkHref="#talend-arrow-left"
                  />
                </svg>
              </Icon>
            </span>
            <span
              className="theme-text"
            >
              Skip navigation to main content
            </span>
          </a>
        </SkipTo>
      </li>
    </ul>
  </nav>
</SkipLinks>
`;
